# Petshop

PetShop/: CMakeLists.txt  animal.cpp  animal.h  cat.cpp  cat.h  chicken.cpp  chicken.h  dog.cpp  dog.h  main.cpp  petshop.cpp  petshop.h
PetShopV2/: CMakeLists.txt  animal.cpp  animal.h  cat.cpp  cat.h  chicken.cpp  chicken.h  dog.cpp  dog.h  main.cpp  petshop.cpp  petshop.h  superuser.cpp  superuser.h  user.cpp  user.h  usermanagement.cpp  usermanagement.h
